--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ body {
   height: 40px;
   overflow: hidden;
   border : 1px solid #D2DAE0;
+  box-sizing: border-box;
 }
 
 .Field-chosen {
@@ -578,3 +579,94 @@ body {
   opacity: 0.7;
 }
 
+.PressNews {
+  width: 930px;
+  height: auto;
+  border: 1px solid #D2DAE0;
+  padding: 24px;
+}
+
+.PressInfo {
+  width: 930px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin: 16px 0;
+}
+
+.Brandmark {
+  width: 51px;
+  height: 20px;
+}
+
+.EditDate {
+  width: 121px;
+  height: 14px;
+  font-size: 12px;
+  line-height: 14.06px;
+  color: #5F6E76;
+}
+
+.SubscribeButton {
+  color: gray;
+  width: auto;
+  height: 24px;
+  border-radius: 50px;
+  border: 1px #D2DAE0;
+  padding: 0 6px 0 6px;
+  gap: 2px;
+  background-color: #F5F7F9;
+}
+
+.News {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.Main {
+  width: 320px;
+  height: auto;
+  cursor: pointer;
+}
+
+.Thumbnail {
+  width: 320px;
+  height: 200px;
+  border: 1px #D2DAE0;
+  background: url("./asset/Thumbnail.svg") no-repeat center center;
+  background-size: cover;
+}
+
+.MainTitle {
+  width: 320px;
+  height: 44px;
+  font-size: 16px;
+  line-height: 22px;
+  margin: 32px 0;
+  color: #14212B;
+  font-weight: bold;
+}
+
+.Sub {
+  width: 100%;
+  height: auto;
+}
+
+.Sub ul {
+	margin: 0;
+}
+
+.Sub li {
+	width: calc(100% - 48px);
+	height: 22px;
+	font-size: 16px;
+	line-height: 22px;
+	color: #4B5966;
+	list-style-type: none;
+	margin: 0 0 16px 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
