--- a/css/field.css
+++ b/css/field.css
@@ -6,18 +6,22 @@
   overflow: hidden;
 }
 
-.all {
+.Field-chosen {
+  background-color: #7890E7;
+}
+
+.Tab {
   float: left;
-  width: 166px;
+  width: auto;
   height: 40px;
+  padding: 0 16px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  background-color: #7890E7;
 }
 
-.all-text {
+.text {
   width: auto;
   height: 17px;
   font-size: 14px;
@@ -25,7 +29,19 @@
   color: #879298;
 }
 
-.all-percentage {
+.Field-chosen .text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
+.percentage {
+  display: none;
+}
+
+.Field-chosen .percentage {
   width: auto;
   height: auto;
   display: flex;
@@ -78,12 +94,23 @@
   color: #879298;
 }
 
+.Field-chosen .broad-text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
 .broad-percentage {
+  display: none;
+}
+
+.Field-chosen .broad-percentage {
   width: auto;
   height: auto;
-  display: none;
+  display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2px;
 }
 
@@ -123,12 +150,23 @@
   color: #879298;
 }
 
+.Field-chosen .it-text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
 .it-percentage {
+  display: none;
+}
+
+.Field-chosen .it-percentage {
   width: auto;
   height: auto;
-  display: none;
+  display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2px;
 }
 
@@ -168,12 +206,23 @@
   color: #879298;
 }
 
+.Field-chosen .english-text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
 .english-percentage {
+  display: none;
+}
+
+.Field-chosen .english-percentage {
   width: auto;
   height: auto;
-  display: none;
+  display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2px;
 }
 
@@ -213,12 +262,23 @@
   color: #879298;
 }
 
+.Field-chosen .sports-text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
 .sports-percentage {
+  display: none;
+}
+
+.Field-chosen .sports-percentage {
   width: auto;
   height: auto;
-  display: none;
+  display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2px;
 }
 
@@ -258,12 +318,23 @@
   color: #879298;
 }
 
+.Field-chosen .magazine-text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
 .magazine-percentage {
+  display: none;
+}
+
+.Field-chosen .magazine-percentage {
   width: auto;
   height: auto;
-  display: none;
+  display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2px;
 }
 
@@ -303,12 +374,23 @@
   color: #879298;
 }
 
+.Field-chosen .region-text {
+  width: 97.77px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #FFFFFF;
+}
+
 .region-percentage {
+  display: none;
+}
+
+.Field-chosen .region-percentage {
   width: auto;
   height: auto;
-  display: none;
+  display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2px;
 }
 
@@ -327,12 +409,4 @@
   line-height: 14.06px;
   color: #FFFFFF;
   opacity: 0.7;
-}
-
-.Field-chosen {
-  width: 97.77px;
-  height: 17px;
-  font-size: 14px;
-  line-height: 16.41px;
-  color: #FFFFFF;
 }
