--- a/css/viewer.css
+++ b/css/viewer.css
@@ -58,7 +58,7 @@
   left: 3px;
   width: 18px;
   height: 18px;
-  background: url("../asset/list-symbol.svg") no-repeat center center;
+  background: url("../asset/button/list-symbol.svg") no-repeat center center;
   background-size: cover;
   border: none;
   cursor: pointer;
@@ -76,7 +76,7 @@
   left: 3px;
   width: 18px;
   height: 18px;
-  background: url("../asset/grid-symbol.svg") no-repeat center center;
+  background: url("../asset/button/grid-symbol.svg") no-repeat center center;
   background-size: cover;
   border: none;
   cursor: pointer;
