--- a/css/newsList.css
+++ b/css/newsList.css
@@ -1,3 +1,24 @@
+.snackBar {
+  visibility: hidden;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 423px;
+  left: 497px;
+  padding: 16px 24px;
+  text-align: center;
+  background-color: #4362D0;
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 22px;
+  z-index: 1;
+}
+
+.snackBar.show {
+  visibility: visible;
+  opacity: 1;
+}
+
 .NewsList {
   position: absolute;
   top: 256px;
