add button events and css

--- a/css/initStyle.css
+++ b/css/initStyle.css
@@ -8,6 +8,8 @@
 
 .AutoRollingNews-Press:hover,
 .AutoRollingNews-NewsTitle:hover,
+.PositiveButton:hover,
+.NegativeButton:hover,
 .AllPress:hover,
 .SubscribedPress:hover,
 .all-text:hover,
